--- a/docs/operational_guide/partner_editable/_settings.adoc
+++ b/docs/operational_guide/partner_editable/_settings.adoc
@@ -1,26 +1,1 @@
-// Change the following attributes.
-:quickstart-project-name: quickstart-amazon-marketing-cloud
-:partner-product-name: AMC Analytics
-// For the following attribute, if you have no short name, enter the same name as partner-product-name.
-:partner-product-short-name: AMC Analytics
-// If there's no partner, comment partner-company-name.
-:partner-company-name: Ad Tech Solutions
-:doc-month: May
-:doc-year: 2022
-// Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Integration & Automation team."
-:partner-contributors: Arpan Shah, Ronak Parikh, & Chaitra Nayak, Amazon Ad Tech Solutions
-//:other-contributors:
-:aws-contributors: Ramesh Jetty, Brian Maguire, & Gerry Louw, AWS Geo Solutions Architecture - Bret Pontillo, Noah Paige, Naomi Joshi & Anmol Gandhi, AWS ProServe - Eric Beard, AWS Partner Core - Chip Reno, AWS Advertising & Marketing Solutions
-:aws-ia-contributors: Troy Ameigh, AWS Integration & Automation
-ok
-
-
-// For deployment_time, use minutes if deployment takes an hour or less,
-// for example, 30 minutes or 60 minutes.
-// Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
-// for example, 1.25 hours, 2 hours, 2.5 hours.
-:deployment_time: 1.5 hours
-:default_deployment_region: us-east-1
-:parameters_as_appendix:
-
-//TODO Marcia to update these settings to match deployment guide.
+//Align with the deployment guide's settings.
