--- a/docs/deployment_guide/partner_editable/architecture.adoc
+++ b/docs/deployment_guide/partner_editable/architecture.adoc
@@ -1,12 +1,12 @@
 :xrefstyle: short
 
-Deploying this Quick Start with default parameters builds the following {partner-product-short-name} serverless environment in the AWS Cloud.
+Deploying this AWS Solution with default parameters builds the following {partner-product-short-name} serverless environment in the AWS Cloud.
 
 [#architecture1]
-.Quick Start architecture for {partner-product-short-name} on AWS
+.Architecture for {partner-product-short-name} on AWS
 image::../docs/deployment_guide/images/AMC-architecture-diagram.png[Architecture]
 
-As shown in <<architecture1>>, the Quick Start sets up the following:
+As shown in <<architecture1>>, this AWS Solution sets up the following:
 
 * Three Amazon Simple Storage Service (Amazon S3) buckets to store AMC query results, prestage data, and poststage data.
 * AWS Step Functions for loading and orchestrating data.
