--- a/docs/deployment_guide/partner_editable/troubleshooting.adoc
+++ b/docs/deployment_guide/partner_editable/troubleshooting.adoc
@@ -1,8 +1,8 @@
-For troubleshooting common Quick Start issues, refer to the https://fwd.aws/rA69w?[AWS Quick Start General Information Guide^] and https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/troubleshooting.html[Troubleshooting CloudFormation^].
+For troubleshooting common issues, refer to https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/troubleshooting.html[Troubleshooting CloudFormation^].
 
 '''
 
-*Q:* I encountered a *CREATE_FAILED* error in CloudFormation when I deployed the Quick Start.
+*Q:* I encountered a *CREATE_FAILED* error in CloudFormation when I deployed this solution.
 
 *A:* Ensure that you have bootstrapped the AWS accounts in use by running the following command, replacing the information in brackets.
 
