--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -54,7 +54,7 @@ $ git config --list
 
 . Open the AWS Cloud9 console, and create an EC2 environment in your chosen AWS Region. Choose instance type t3.small or larger, Amazon Linux 2. For details refer to https://docs.aws.amazon.com/cloud9/latest/user-guide/create-environment-main.html[Creating an EC2 Environment^].
 
-. In your integrated development environment (IDE), download the https://fwd.aws/Rp8mK?[{partner-product-short-name} repository^], upload it to your AWS Cloud9 instance, and unzip it.
+. In your integrated development environment (IDE), download the https://fwd.aws/Rp8mK?[{partner-product-name} repository^], upload it to your AWS Cloud9 instance, and unzip it.
 +
 By default, Python, pip, AWS CLI, AWS CDK, and Git are installed and configured for you in your AWS Cloud9 environment.
 
@@ -73,9 +73,9 @@ $ git --version
 * pip 9.0.3 or later.
 * AWS CDK version 2.10 or later.
 
-=== Clone the {partner-product-short-name} repo
+=== Clone the repo
 
-Clone the https://fwd.aws/Rp8mK?[{partner-product-short-name} repository^] as follows, replacing the information in brackets.
+Clone the https://fwd.aws/Rp8mK?[{partner-product-name} repository^] as follows, replacing the information in brackets.
 
 ```
 $ git clone <GITHUB-PATH>
@@ -137,7 +137,7 @@ $ git init --initial-branch main
 . Create a new CodeCommit repository as follows. Replace the information in brackets, using the repository name value from the `ddk.json` configuration file. The template is launched in the {default_deployment_region} Region by default; change this Region if necessary in the following command.
 +
 ```
-$ ddk create-repository <AMC_QUICKSTART_REPO_NAME> --profile <AWS_PROFILE> --region <AWS_REGION>
+$ ddk create-repository <AMC_REPO_NAME> --profile <AWS_PROFILE> --region <AWS_REGION>
 ```
 
 . Add and push the initial commit to the repository as follows, replacing the information in brackets.
@@ -147,13 +147,13 @@ $ ddk create-repository <AMC_QUICKSTART_REPO_NAME> --profile <AWS_PROFILE> --reg
 $ git config --global credential.helper "!aws codecommit --profile <my-profile> credential-helper $@"
 $ git config --global credential.UseHttpPath true
 $ git add .
-$ git commit -m "Configure AMC QUICKSTART"
+$ git commit -m "Configure AMC Insights on AWS"
 $ git push --set-upstream origin main
 ```
 
 == Deployment steps
 
-Deploying this AWS Solution takes about {deployment_time} to complete.
+Deploying this solution takes about {deployment_time} to complete.
 
 . Run the `deploy` command as follows, replacing the information in brackets.
 +
